--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,15 @@ Website color palate:
 #7692FF cornflower blue
 */
 
+@media (prefers-reduced-motion: no-preference) {
+    * {
+      scroll-behavior: smooth;
+    }
+  }
+
 body {
+    position: absolute;
+    top: 10px;
     width: 100%;
     height: 100vh;
     margin: 0;
@@ -21,6 +29,12 @@ h1, h3, p {
     text-align: center;
 }
 
+h1 {
+    color: #f1be32;
+    font-size: min(5vw, 1.2em);
+    text-align: center;
+  }
+
 header {
     width: 100%;
     height: 50px;
@@ -33,6 +47,10 @@ header {
   }
 
   nav {
+    padding-left: 50px;
+    display: flex;
+    align-items: right;
+    position: fixed;
     width: 50%;
     max-width: 300px;
     height: 50px;
@@ -52,6 +70,7 @@ header {
     color: #dfdfe2;
     margin: 0 0.2rem;
     padding: 0.2rem;
+    padding-right: 20px;
     display: block;
   }
   
