--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: #14213D;
-    color: #E5E5E5;
+    background-color: #CCCCCC;
+    color: #000;
     font-family: Tahoma;
     font-size: 16px;
 }
@@ -35,10 +35,16 @@ h1 {
     text-align: center;
   }
 
+h2 {
+    color:#E5E5E5;
+    font-size: min(5vw, 2em);
+    text-align: center;
+}  
+
 header {
     width: 100%;
     height: 50px;
-    background-color: #1b1b32;
+    background-color: #181719;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -88,3 +94,13 @@ header {
   main {
     padding-top: 50px;
   }
+
+  .welcome-section {     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: #CCCCCC;
+    background-image: linear-gradient(0deg, #CCCCCC 0%, #181719 100%);
+}
