--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-/*
-Website color palate:
-#14213D oxford blue
-#FCA311 orange peel
-#E5E5E5 Platinum gray
-#7692FF cornflower blue
-*/
 
 @media (prefers-reduced-motion: no-preference) {
     * {
@@ -52,7 +45,7 @@ header {
     top: 0;
   }
 
-  nav {
+nav {
     padding-left: 50px;
     display: flex;
     align-items: right;
@@ -62,7 +55,7 @@ header {
     height: 50px;
   }
   
-  nav > ul {
+nav > ul {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
@@ -72,7 +65,7 @@ header {
     height: 100%;
   }
   
-  nav > ul > li {
+nav > ul > li {
     color: #dfdfe2;
     margin: 0 0.2rem;
     padding: 0.2rem;
@@ -86,16 +79,17 @@ header {
     cursor: pointer;
   }
   
-  li > a {
+li > a {
     color: inherit;
     text-decoration: none;
   }
   
-  main {
-    padding-top: 50px;
+main {
+    padding-top: 40px;
   }
 
-  .welcome-section {     display: flex;
+.welcome-section {     
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
